# variate

./: .gitignore  Cargo.toml  README.md  codespace.diff  graph.md
adapters/synapse/: Cargo.toml
adapters/synapse/src/: 65.md  extract.rs  insert.rs  lib.rs  main.rs
cli/: Cargo.toml
lib/: Cargo.toml
lib/src/: lib.rs  traits.rs  types.rs
