[package]
name = "variate_synapse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.2", features = ["with-serde_json-1"] }
serde_json = "1.0.71"
serde = { version = "1.0.130", features = ["derive"] }
variate_lib = { path = "../../lib" }
postgres-types = { version = "0.2.2", features = ["derive"] }
